2002-08-12  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/dl-tls.c (_dl_allocate_tls_init): Fix inner loop
	start count condition, use TOTAL instead of variable that was never
	set.  Fix outer loop termination condition to TOTAL >= after update.

	* sysdeps/generic/libc-tls.c (__libc_setup_tls): Initialize
	dl_tls_static_align and dl_tls_static_nelem.

2002-08-11  Roland McGrath  <roland@redhat.com>

	* elf/tst-tlsmod4.c (in_dso): Insert a random library call before use
	of the TLS macros, otherwise the compiler might not have initialized
	the PIC register yet when we use the PLT via asm.
	* elf/tst-tlsmod3.c (in_dso2): Likewise.
	* elf/tst-tlsmod2.c (in_dso): Likewise.

	* sunrpc/svc_authux.c (_svcauth_unix): Remove spurious printf (ugh!).

	* sysdeps/i386/bits/byteswap.h (__bswap_16, __bswap_32, __bswap_64):
	Evaluate argument exactly once.  Remove __volatile__ from asm's.

	* include/unistd.h: Use libc_hidden_proto for getdomainname
	and getlogin_r.
	* sysdeps/generic/getdomain.c: Add libc_hidden_def.
	* sysdeps/mach/hurd/getdomain.c: Likewise.
	* sysdeps/unix/getlogin_r.c: Likewise.
	* sysdeps/mach/hurd/getlogin_r.c: Likewise.
	* sysdeps/generic/getlogin_r.c: Likewise.

	* include/rpc/auth_des.h: Use libc_hidden_proto for rtime.
	* sunrpc/rtime.c: Add libc_hidden_def.

	* include/string.h: Use libc_hidden_proto for basename.
	* string/basename.c [_LIBC]: Add libc_hidden_def.

	* sysdeps/unix/sysv/linux/opensock.c (__opensock): socket -> __socket.

	* locale/loadarchive.c: munmap -> __munmap throughout.

	* include/netdb.h: Use libc_hidden_proto for gai_strerror.
	* sysdeps/posix/gai_strerror.c: Add libc_hidden_def.
	* sysdeps/generic/gai_strerror.c: Likewise.

	* include/sys/errno.h: New file.

	* include/signal.h: No libc_hidden_proto for raise,
	__libc_current_sigrtmin, __libc_current_sigrtmax.
	These need to be overridden by linuxthreads.
	* sysdeps/posix/raise.c: Reverted.
	* sysdeps/generic/raise.c: Reverted.
	* signal/allocrtsig.c: Reverted.
